--- a/css/_fop.scss
+++ b/css/_fop.scss
@@ -1,74 +1,65 @@
-$color_text: #4b4a4a;
-%h1 {
-    font-family: Golos;
-    font-size: 36px;
-    font-weight: 900;
-    line-height: 43px;
-    color: $color_text;
-}
-%h2 {
-    color: $color_text;
-    font-family: Golos;
-    font-size: 27px;
-    font-weight: 700;
-    line-height: 27px;
-}
-%h3 {
-    font-family: Golos;
-    font-size: 21px;
-    font-weight: 500;
-    line-height: 21px;
-    color: $color_text;
-}
-%h4 {
-    font-family: Golos;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 19px;
-    color: $color_text;
-}
-%BodyM {
-    font-family: Golos;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    color: $color_text;
-}
-%Text {
-    font-family: Golos;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-}
-
 .fop__section {
-    padding: 116px 16px 16px;
+    padding: 100px 16px 16px;
     h2 {
-        @extend %h2;
+        color: #4b4a4a;
+        font-family: Golos;
+        font-size: 19px;
+        font-weight: 700;
+        line-height: 27px;
         margin-bottom: 16px;
         span {
-            color: rgb(233, 95, 95);
+            color: #a326f7;
+            font-size: 16px;
+            font-weight: 500;
         }
     }
     ol {
         list-style: inside decimal;
         margin-top: 16px;
         li {
-            @extend %Text;
+            font-family: Golos;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 19px;
             margin-bottom: 16px;
-            max-width: 600px;
+            color: #4b4a4a;
+            margin-bottom: 16px;
         }
     }
     p {
-        @extend %Text;
+        font-family: Golos;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19px;
         margin-bottom: 16px;
+        color: #4b4a4a;
     }
     h3 {
         font-family: Golos;
         font-size: 21px;
         font-weight: 500;
         line-height: 21px;
-        color: rgb(233, 95, 95);
+        color: #cc0001;
+        margin-bottom: 8px;
+        span {
+            color: #a326f7;
+            font-size: 16px;
+            font-weight: 500;
+        }
+    }
+    h4 {
+        font-family: Golos;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 19px;
+        color: #4b4a4a;
+        span {
+            color: #a326f7;
+            font-size: 16px;
+            font-weight: 500;
+        }
+    }
+    .links {
         margin-bottom: 16px;
     }
 }
