--- a/css/_header.scss
+++ b/css/_header.scss
@@ -171,8 +171,8 @@ header {
                 left: -100%;
                 width: 100%;
                 height: 100%;
-                margin-top: 86px;
-                padding: 24px 0;
+                margin-top: 70px;
+                padding: 16px 0;
                 list-style: none;
                 backdrop-filter: blur(4px);
                 background: rgb(255,255,255);
@@ -183,7 +183,7 @@ header {
 
                 .navigation-mobile__item {
                     display: block;
-                    padding: 24px;
+                    padding: 16px 24px;
                     color: rgb(44, 43, 43);
                     font-size: 18px;
                     font-weight: 600;
