--- a/css/_rent.scss
+++ b/css/_rent.scss
@@ -1,30 +1,11 @@
-$color_text: #4b4a4a;
-%h1 {
-  font-family: Golos;
-  font-size: 36px;
-  font-weight: 900;
-  line-height: 43px;
-  color: $color_text;
-}
-
-%h2 {
-  font-family: Golos;
-  font-size: 27px;
-  font-weight: 700;
-  line-height: 27px;
-  color: $color_text;
-}
-%BodyM {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: $color_text;
-}
 .rent__section {
-  padding: 116px 16px 16px;
+  padding: 100px 16px 16px;
   h2 {
-    @extend %h2;
+    color: #4b4a4a;
+    font-family: Golos;
+    font-size: 27px;
+    font-weight: 700;
+    line-height: 27px;
     margin-bottom: 24px;
     @include for-phone-only {
       font-size: 24px;
